# auser

./: .pkg  CMakeLists.txt  LICENSE  README.md  openapi.yaml
exe/: auser.cc  vdvauser.cc  vdvausproxy.cc
include/auser/: config.h  connection.h  fetch.h  get_upstream.h  history.h  http.h  subscription.h  time.h  types.h  xml.h
include/auser/endpoints/: client_status.h  data_ready.h  fetch.h  get_updates.h
include/auser/scheduler/: runner.h  scheduler_algo.h
include/vdvauser/: config.h  connection.h  http.h  subscription.h  time.h  xml.h
include/vdvauser/endpoints/: client_status.h  data_ready.h
include/vdvauser/scheduler/: runner.h  scheduler_algo.h
include/vdvausproxy/: config.h
include/vdvausproxy/scheduler/: runner.h  scheduler_algo.h
src/: config.cc  connection.cc  fetch.cc  get_upstream.cc  history.cc  http.cc  subscription.cc  time.cc  xml.cc
src/endpoints/: client_status.cc  data_ready.cc  fetch.cc  get_updates.cc
src/scheduler/: scheduler_algo.cc
test/: client_status_test.cc  data_ready_test.cc  fetch_test.cc  get_updates_test.cc  history_test.cc  main.cc
